force-app/main/default/objects/RealEstateProperty__c/RealEstateProperty__c.object-meta.xml
<CustomObject>
    
    <label>Real Estate Property</label>
    <nameField>
        <label>Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Real Estate Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>