force-app/main/default/objects/RealEstateProperty__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <label>Garage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>